deployments/prod/robot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-ro-robot
  labels:
    app: open-ro-robot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-ro-robot
  template:
    metadata:
      labels:
        app: open-ro-robot
    spec:
      containers:
      - name: robot
        image: simonovbs/openrobot:0.0.8
        imagePullPolicy: Always
        command: [./openrobot]
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 5555
          name: http
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 60
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: "/health"
            port: 5555
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: "/health"
            port: 5555
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
